vm_includes += 'os/include'

vm_sources += 'os/src/bt_main.c'

subdir('src/devman')
subdir('src/gpio')
subdir('src/fs')
subdir('src/helpers')
subdir('src/interfaces')
subdir('src/interrupts')
subdir('src/lib')
subdir('src/module')
subdir('src/mm')
subdir('src/process')
subdir('src/syslog')
subdir('src/timers')