vm_includes += 'arch/arm/include'
vm_includes += 'arch/arm/include/arch/common'


vm_sources += 'arch/arm/boot/head.S'
vm_sources += 'arch/arm/common/arm11cpu.c'
vm_sources += 'arch/arm/common/arm-cache.c'
vm_sources += 'arch/arm/common/crtinit.s'
vm_sources += 'arch/arm/common/cpuinit.S'
vm_sources += 'arch/arm/common/gic.c'
vm_sources += 'arch/arm/common/freertos-ca9.c'
vm_sources += 'arch/arm/common/freertos-ca9-asm.S'


subdir('mach')