#
# FreeRTOS build module.
#

#
# Adding to the default source list.
#
vm_includes += 'kernel/FreeRTOS/Source/include'
vm_sources += 'kernel/FreeRTOS/Source/tasks.c'
vm_sources += 'kernel/FreeRTOS/Source/list.c'
vm_sources += 'kernel/FreeRTOS/Source/queue.c'
vm_sources += 'kernel/FreeRTOS/Source/event_groups.c'


